# OpenGL_BlackHole_Simulation

./: CMakeLists.txt  README.md
shaders/: fragment.glsl  vertex.glsl
src/: ParticleSystem.cpp  ParticleSystem.h  ShaderProgram.cpp  ShaderProgram.h  main.cpp
